--- a/src/views/home.handlebars
+++ b/src/views/home.handlebars
@@ -1,6 +1,22 @@
 <main class="home">
   <h1> Vista de Productos</h1>
 
+  <form class="inputLimit" action="/" method="get">
+    <label for="limit">Cantidad de productos a visualizar:</label>
+    <input type="number" id="limit" name="limit" min="1" max="100" />
+
+    <label for="sort">Ordenar por precio:</label>
+    <select id="sort" name="sort">
+      <option value="asc">Ascendente</option>
+      <option value="desc">Descendente</option>
+    </select>
+
+    <label for="title">Buscar por título:</label>
+    <input type="text" id="title" name="title" />
+
+    <button type="submit">Consultar</button>
+  </form>
+
   <div class="card-container">
     {{#if products.length}}
     {{#each products}}
@@ -12,7 +28,15 @@
     {{/each}}
     {{else}}
     <h2>No hay productos para mostrar!</h2>
-    {{/if}}
+{{/if}}
   </div>
-
+<div class="paginas">
+    {{#if hasPrevPage}}
+      <a class="btn" href="{{prevLink}}">⏪</a>
+    {{/if}}
+    <span>Página {{page}}</span>
+    {{#if hasNextPage}}
+      <a class="btn" href="{{nextLink}}">⏩</a>
+    {{/if}}
+  </div>
 </main>
